[project]
name = "fides"
version = "0.1.0"
description = "Flow Integrity Deterministic Enforcement System. Mechanisms for securing AI agents with information-flow control."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.23.0",
    "docstring-parser>=0.16",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "ipykernel>=6.29.5",
]
